--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -252,7 +252,7 @@
 
 
 
-
+<div itemscope itemtype="http://schema.org/Person" itemprop="Dr. Casey Frechette">
 jQuery("#institution-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
@@ -265,7 +265,7 @@ jQuery("#institution-step input").click (function () {
     });
 });
 
-
+</div>
 
 /*
     $( "#institution-step input" ).each(function( index ) {
