--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" vocab="http://schema.org/" typeof="CreativeWork">
 <head vocab="http://schema.org/" typeof="CreativeWork">
-<link rel='icon' href='data:;base64,iVBORw0KGgo='>
+<!-- <link rel='icon' href='data:;base64,iVBORw0KGgo='> -->
 <title property="name">Test Form Five</title>
 <meta name="viewport" content="width-device-widht, initial-scale=1">
   <meta charset="UTF-8">
