--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -238,7 +238,9 @@
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
     <aside itemscope itemtype="http://schema.org/Person">
-    <header itemprop=""><h6>Contributors</h6></header>
+    <header><h5>Designers</h5></header>
+    <li itemprop="name">Dr. Casey Frechette</li>
+    <li itemprop="name">Mr. Berrie Watson</li>
     </aside>
   
   <aside><h6>Ampersands possibly throw errors in accessiblity testing</h6></aside>
