--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -49,7 +49,7 @@
 <aside>
 <p><b>ResultsUSF:</b> <span id="resultsUSF"></span></p>
 </aside>
-  <article itemscope itemtype="http://schema.org/Place">
+  <article itemscope itemtype="http://schema.org/CreativeWork">
     <header itemprop="mainEntityOfPage"><h1>Form One Test Five</h1></header>
     <aside><h4>Needs the following:</h4>
     <ul>
