--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -5,9 +5,8 @@
 <!-- <link rel='icon' href='data:;base64,iVBORw0KGgo='> -->
 <title property="name">Test Form Five</title>
 <meta name="viewport" content="width-device-widht, initial-scale=1">
-<meta typeof="Organization" itemprop="sourceOrganization" name="USFSP">
 
-    <style>
+<style>
   body, select {
     font-size: 14px;
   }
@@ -240,7 +239,7 @@
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
     <aside itemscope itemtype="http://schema.org/Person">
-    <header><h5>Designers</h5></header>
+    <header itemprop="sourceOrganization" name="USFSP"><h5>Designers</h5></header>
     <li itemprop="name">Dr. Casey Frechette</li>
     <li itemprop="name">Mr. Berrie Watson</li>
     </aside>
