--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -239,10 +239,14 @@
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
     <aside itemscope itemtype="http://schema.org/Person">
-    <header itemprop="sourceOrganization" name="USFSP"><h5>Designers</h5></header>
+    <header><h5>Designers</h5></header>
     <li itemprop="name">Dr. Casey Frechette</li>
     <li itemprop="name">Mr. Berrie Watson</li>
-    </aside>
+  </aside>
+  <aside itemscope itemtype="http://schema.org/Place">
+    <header itemprop="sourceOrganization" name="USFSP"><h5>Organization</h5></header>
+    <li itemprop="name">USFSP</li>
+  </aside>
   
   <aside><h6>Ampersands possibly throw errors in accessiblity testing</h6></aside>
   <footer>
