--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -243,12 +243,12 @@
     <li itemprop="name">Dr. Casey Frechette</li>
     <li itemprop="name">Mr. Berrie Watson</li>
   </aside>
-  <aside itemscope itemtype="http://schema.org/Place">
-    <header itemprop="sourceOrganization" name="USFSP"><h5>Organization</h5></header>
-    <li itemprop="name">USFSP</li>
+
+  <aside><header><h5>Needs to be Checked</h5></header>
+  <ul>
+   <li>Ampersands possibly throw errors in accessiblity testing</li>
+   </ul>
   </aside>
-  
-  <aside><h6>Ampersands possibly throw errors in accessiblity testing</h6></aside>
   <footer>
     <h4>References</h4>
     <ul>
