--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -238,10 +238,10 @@
     </section>
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
-    <aside itemscope itemtype="http://schema.org/Person">
-    <header><h5>Designers</h5></header>
-    <li itemprop="name">Dr. Casey Frechette</li>
-    <li itemprop="name">Mr. Berrie Watson</li>
+  <aside itemscope itemtype="http://schema.org/Person">
+    <header><h5>Team Members</h5></header>
+    <li itemprop="developer">Dr. Casey Frechette</li>
+    <li itemprop="systems">Mr. Berrie Watson</li>
   </aside>
 
   <aside><header><h5>Needs to be Checked</h5></header>
