--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -240,8 +240,8 @@
   </article>
   <aside itemscope itemtype="http://schema.org/Person">
     <header><h5>Team Members</h5></header>
-    <li itemprop="developer">Dr. Casey Frechette</li>
-    <li itemprop="systems">Mr. Berrie Watson</li>
+    <li itemprop="workExample">Dr. Casey Frechette, Developer</li>
+    <li itemprop="contributor">Mr. Berrie Watson, Systems</li>
   </aside>
 
   <aside><header><h5>Needs to be Checked</h5></header>
