--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -264,7 +264,7 @@
   <script>
 
 
-
+<!-- original code block developed by Dr. Casey Frechette follows -->
 jQuery("#institution-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
@@ -276,8 +276,7 @@ jQuery("#institution-step input").click (function () {
         }
     });
 });
-
-  
+<!-- end code block developed by Dr. Casey Frechette -->
 </script>
   </body>
 </html>
