--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -239,10 +239,10 @@
     <section><header><h2>Section Four: Courses</h2></header></section>
   </article>
   <aside itemscope itemtype="http://schema.org/Code">
-    <header><h5>Team Members</h5></header>
+    <header><h5>Development</h5></header>
     <ul>
-    <li itemprop="workExample">Dr. Casey Frechette, Developer</li>
-    <li itemprop="contributor">Mr. Berrie Watson, Systems</li>
+    <li itemprop="workExample">Dr. Casey Frechette, Code Development and Design</li>
+    <li itemprop="contributor">Mr. Berrie Watson, Systems and User Experience</li>
     </ul>
   </aside>
 
@@ -254,7 +254,7 @@
   <footer>
     <h4>References</h4>
     <ul>
-      <li><h3>Last Number 121</h3></li>
+      <li><h4>Current Last Number 121 for ID</h4></li>
       </ul>
     <ul>
       <li><a href="http://www.html5rocks.com/en/tutorials/forms/constraintvalidation/">Form Constraint Validation</a></li>
