--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -227,6 +227,7 @@
     <li>ReAssign IDs</li>
     <li>Add new item for each campus</li>
     <li>Automated Accessibility Testing: Section 508 testing does not match WCAG testing</li>
+    <li>Fav Icon Issue for Mobile Validation, HTTP requests</li>
    </ul>
   </aside>
   <footer>
