--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -227,7 +227,7 @@
     </ul>
   </aside>
 
-  <aside><header><h3>To Do List</h3></h3></header>
+  <aside><header><h3>To Do List</h3></header>
   <ul>
     <li>ReAssign IDs</li>
     <li>Add new item for each campus</li>
