--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -234,7 +234,7 @@
     <li>Add new item for each campus</li>
     <li>Display: Add breaks after groups</li>
     <li>Coordinate with Casey ensure Colleges with multiple departments are accounted for in code.  E.G. Education Tampa has the same college code of (ED) but fall under two different departments Adult/Vocational/Hum Res Div (EDV) and Administration/Supervision (EDB)</li>
-    <li>Coordinate with Casey to ensure that it is okay to designate lower-case letters always match campus in naming convention</li>
+    <li>Coordinate with Casey to ensure that it is okay to designate lower-case letters always match campus in naming convention, E.G.Human and Social Sciences (HT)</li>
     <li>Automated Accessibility Testing: Section 508 testing does not match WCAG testing</li>
     <li>Fav Icon Issue for Mobile Validation, HTTP requests</li>
    </ul>
