--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -62,7 +62,7 @@
                         <input type="checkbox" name="Education" value="Education" class="I-STPETE" id="C3b"><label for="C3b">Education SP</label>
                         <input type="checkbox" name="Education" value="Education" class="I-SARASOTA" id="C3c"><label for="C3c">Education SM</label>
                         
-                        <input type="checkbox" name="Human and Social Sciences" value="Human and Social Sciences" id="I-OTHER" id="C4d"><label for="C4d">Human and Social Sciences</label>
+                        <input type="checkbox" name="Human and Social Sciences" value="Human and Social Sciences" class="I-OTHER" id="C4d"><label for="C4d">Human and Social Sciences</label>
 
                         <input type="checkbox" name="Arts and Sciences" value="Arts and Sciences" id="C3"><label for="C3">Arts & Sciences</label>
                         
