--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -219,14 +219,7 @@
       <ul><li>TBD</li></ul>
     </section>
   </article>
-  <aside itemscope itemtype="http://schema.org/Code">
-    <header><h3>Project Development</h3></header>
-    <ul>
-    <li itemprop="workExample">Dr.Frechette, Code Development and Interface Design</li>
-    <li itemprop="contributor">Mr. Watson, Systems and Advisor for User Experience</li>
-    <li itemprop="contributor">Ms. Austin</li>
-    </ul>
-  </aside>
+
 
   <aside><header><h3>To Do List</h3></header>
   <ul>
@@ -248,6 +241,17 @@
       <li><a href="http://api.jquery.com/serializeArray/">JQuery serializeArray</a></li>
     </ul>
   </footer>
+    <footer itemscope itemtype="http://schema.org/Code">
+      <header><h3>Project Development</h3></header>
+      <ul>
+        <li itemprop="workExample">Dr.Frechette, Code Development and Interface Design</li>
+        <li itemprop="contributor">Mr. Watson, Systems and Advisor for User Experience</li>
+        <li itemprop="contributor">Ms. Austin</li>
+      </ul>
+  </footer>
+  
+  
+  
   
   <script>
 <!-- original code block developed by Dr. Casey Frechette follows -->
