--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -232,6 +232,15 @@
     <li>Fav Icon Issue for Mobile Validation, HTTP requests</li>
    </ul>
   </aside>
+  <aside itemscope itemtype="http://schema.org/Code">
+      <header><h3>Project Development</h3></header>
+      <ul>
+        <li itemprop="workExample">Dr.Frechette, Code Development and Interface Design</li>
+        <li itemprop="contributor">Mr. Watson, Systems and Advisor for User Experience</li>
+        <li itemprop="contributor">Ms. Austin</li>
+      </ul>
+  </aside>
+  
   <footer>
     <h3>References</h3>
     <ul>
@@ -241,14 +250,7 @@
       <li><a href="http://api.jquery.com/serializeArray/">JQuery serializeArray</a></li>
     </ul>
   </footer>
-    <footer itemscope itemtype="http://schema.org/Code">
-      <header><h3>Project Development</h3></header>
-      <ul>
-        <li itemprop="workExample">Dr.Frechette, Code Development and Interface Design</li>
-        <li itemprop="contributor">Mr. Watson, Systems and Advisor for User Experience</li>
-        <li itemprop="contributor">Ms. Austin</li>
-      </ul>
-  </footer>
+
   
   
   
