--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -257,6 +257,9 @@
     <li>Display: Add breaks after groups</li>
     <li>Coordinate with Casey ensure Colleges with multiple departments are accounted for in code.  E.G. Education Tampa has the same college code of (ED) but fall under two different departments Adult/Vocational/Hum Res Div (EDV) and Administration/Supervision (EDB)</li>
     <li>Coordinate with Casey to ensure that it is okay to designate lower-case letters always match campus in naming convention, E.G.Human and Social Sciences (HT)</li>
+    <li>Coordinate to make sure that Section Three was changed from Programs to Departments, due to listing on usf page</li>
+    <li>Ask how Programs should be listed</li>
+    <li>Ensure Casey knows ids and label for changed from a P prefix to a D (from Program to Department)</li>
     <li>Automated Accessibility Testing: Section 508 testing does not match WCAG testing</li>
     <li>Fav Icon Issue for Mobile Validation, HTTP requests</li>
    </ul>
