--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -251,6 +251,7 @@
 
   <aside><header><h3>To Do List</h3></header>
   <ul>
+    <li style="color:red">CHECK can you have the same value for different IDs in a form field?</li>
     <li>ReAssign IDs</li>
     <li>Add new item for each campus</li>
     <li>Double check for campus listings after "Undergraduate Studies" by doing a serach</li>
