--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -111,10 +111,10 @@
       <form>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1a"><label for="D1a">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-STPETE" id="D1b"><label for="D1b">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-SARASOTA" id="D1c"><label for="D1c">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1d"><label for="D1d">Accounting</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1"><label for="D1a">Accounting</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-STPETE" id="D1"><label for="D1b">Accounting</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-SARASOTA" id="D1"><label for="D1c">Accounting</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1"><label for="D1d">Accounting</label>
                         
                         <input type="checkbox" name="Administration/Supervision" data-code="(EDB)" id="P2"><label for="P2">Administration/Supervision</label>
                         
