--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -111,10 +111,10 @@
       <form>
       <fieldset>
                 <legend>Which Program Do You Wish to Attend?</legend>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1"><label for="D1a">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-STPETE" id="D1"><label for="D1b">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-SARASOTA" id="D1"><label for="D1c">Accounting</label>
-                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting" class="I-TAMPA" id="D1"><label for="D1d">Accounting</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting Tampa" class="I-TAMPA" id="D1a"><label for="D1a">Accounting Tampa</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting SP" class="I-STPETE" id="D1b"><label for="D1b">Accounting SP</label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting SM" class="I-SARASOTA" id="D1c"><label for="D1c">Accounting SM </label>
+                        <input type="checkbox" name="Accounting" data-code="(ACC)" value="Accounting Other" class="I-TAMPA" id="D1d"><label for="D1d">Accounting Other</label>
                         
                         <input type="checkbox" name="Administration/Supervision" data-code="(EDB)" id="P2"><label for="P2">Administration/Supervision</label>
                         
@@ -251,7 +251,7 @@
 
   <aside><header><h3>To Do List</h3></header>
   <ul>
-    <li style="color:red">CHECK can you have the same value for different IDs in a form field?</li>
+    <li style="color:red">Change Values and Names as well as labels to relfect the campuses</li>
     <li>ReAssign IDs</li>
     <li>Add new item for each campus</li>
     <li>Double check for campus listings after "Undergraduate Studies" by doing a serach</li>
