--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -32,7 +32,7 @@
   <article itemscope itemtype="http://schema.org/CreativeWork">
     <header itemprop="mainEntityOfPage"><h1>Form One Test Five</h1></header>
     <h2>This Page Is Under Development</h2>
-    <h3>Source Document:<span>itemscope itemtype="http://schema.org/Organization" itemprop="sourceOrganization">USFSP</span><a href="http://www.registrar.usf.edu/ssearch/data/dept.php">OASIS Search Page</a></h3>
+    <h3>Source Document:<span itemscope itemtype="http://schema.org/Organization" itemprop="sourceOrganization">USFSP</span><a href="http://www.registrar.usf.edu/ssearch/data/dept.php">OASIS Search Page</a></h3>
 
     <section>
       <header><h3>Section One: Institutions</h3></header>
