--- a/tasks/form1/test5.html
+++ b/tasks/form1/test5.html
@@ -166,7 +166,7 @@
                         <input type="checkbox" name="Biology-Cell, Molecular & Micr Tampa" value="Biology-Cell, Molecular & Micr Tampa" data-code="(BCM)" class="I-TAMPA" id="D19a"><label for="D19a">Biology-Cell, Molecular & Micr(Tampa)</label>
                         
                         <input type="checkbox" name="Business Administration Tampa" value="Business Administration Tampa" data-code="(MBA)" class="I-TAMPA" id="D20a"><label for="D20a">Business Administration (Tampa)</label>
-                        <input type="checkbox" name="Business Administration Tampa" value="Business Administration SP" data-code="(MBA)" class="I-STPETE" id="D20b"><label for="D20b">Business Administration (Tampa)</label>
+                        <input type="checkbox" name="Business Administration Tampa" value="Business Administration SP" data-code="(MBA)" class="I-STPETE" id="D20b"><label for="D20b">Business Administration (SP)</label>
                         
                         <input type="checkbox" name="Business Administration Tampa" value="Business Administration Tampa" data-code="(GBA)" class="I-TAMPA" id="D21a"><label for="D21a">Business Administration - Gen (Tampa)</label>
                         <input type="checkbox" name="Business Administration SP" value="Business Administration SP" data-code="(GBA)" class="I-STPETE" id="D21b"><label for="D21b">Business Administration - Gen (SP)</label>
