--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -571,10 +571,10 @@ jQuery("#department-step input").click (function () {
     var currentState3 = jQuery(this).is(':checked');
     var currentID3 = jQuery(this).attr('id');
     jQuery("#department-step input").each(function(index) {
-        if (jQuery(this).hasClass(currentID)) {
+        if (jQuery(this).hasClass(currentID3)) {
             var displayState3 = currentState ? 'inline-block' : 'none';
-            jQuery(this).css({'display':displayState});
-            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
+            jQuery(this).css({'display':displayState3});
+            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState3});
         }
     });
 });
