--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -12,6 +12,11 @@
   #college-step label {
     display: none
   }
+  
+  #department-step input,
+  #department-step label {
+    display: none
+  }
 </style>
 
 </head>
