--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -573,13 +573,13 @@ jQuery("#institution-step input").click (function () {
 <!-- end code block developed by Dr. Casey Frechette -->
 <!-- modified  code block developed by Dr. Casey Frechette follows -->
 jQuery("#department-step input").click (function () {
-    var currentState3 = jQuery(this).is(':checked');
-    var currentID3 = jQuery(this).attr('id');
+    var currentState = jQuery(this).is(':checked');
+    var currentID = jQuery(this).attr('id');
     jQuery("#department-step input").each(function(index) {
-        if (jQuery(this).hasClass(currentID3)) {
-            var displayState3 = currentState3 ? 'inline-block' : 'none';
-            jQuery(this).css({'display':displayState3});
-            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState3});
+        if (jQuery(this).hasClass(currentID)) {
+            var displayState = currentState ? 'inline-block' : 'none';
+            jQuery(this).css({'display':displayState});
+            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
         }
     });
 });
