--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -572,7 +572,7 @@ jQuery("#institution-step input").click (function () {
 });
 <!-- end code block developed by Dr. Casey Frechette -->
 <!-- modified  code block developed by Dr. Casey Frechette follows -->
-jQuery("#department-step input").click (function () {
+jQuery("#college-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
     jQuery("#department-step input").each(function(index) {
