--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -580,6 +580,7 @@ jQuery("#college-step input").click (function () {
     jQuery("#department-step input").each(function(index) {
         if (jQuery(this).hasClass(currentID)) {
             var displayState = currentState ? 'inline-block' : 'none';
+            alert ('hi');
             jQuery(this).css({'display':displayState});
             jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
         }
