--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -577,10 +577,11 @@ jQuery("#institution-step input").click (function () {
 jQuery("#college-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
+    alert('clicked');
     jQuery("#department-step input").each(function(index) {
         if (jQuery(this).hasClass(currentID)) {
+            alert('working');
             var displayState = currentState ? 'inline-block' : 'none';
-            alert ('hi');
             jQuery(this).css({'display':displayState});
             jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
         }
