--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -562,6 +562,7 @@
 jQuery("#institution-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
+    alert('clicked step one');
     jQuery("#college-step input").each(function(index) {
         if (jQuery(this).hasClass(currentID)) {
             var displayState = currentState ? 'inline-block' : 'none';
