--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -562,7 +562,6 @@
 jQuery("#institution-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
-    alert('clicked step one');
     jQuery("#college-step input").each(function(index) {
         if (jQuery(this).hasClass(currentID)) {
             var displayState = currentState ? 'inline-block' : 'none';
@@ -577,11 +576,11 @@ jQuery("#institution-step input").click (function () {
   <!-- modified code block developed by Dr. Casey Frechette follows -->
 jQuery("#college-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
-    var currentID = jQuery(this).attr('id');
-    alert('clicked');
+    var currentIDDepartment = jQuery(this).attr('id');
+    alert('clicked college-step input');
     jQuery("#department-step input").each(function(index) {
-        if (jQuery(this).hasClass(currentID)) {
-            alert('working');
+        if (jQuery(this).hasClass(currentIDDepartment)) {
+            alert('department working');
             var displayState = currentState ? 'inline-block' : 'none';
             jQuery(this).css({'display':displayState});
             jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
