--- a/tasks/form1/test7.html
+++ b/tasks/form1/test7.html
@@ -576,15 +576,15 @@ jQuery("#institution-step input").click (function () {
 <script>
   <!-- modified code block developed by Dr. Casey Frechette follows -->
 jQuery("#college-step input").click (function () {
-    var currentState = jQuery(this).is(':checked');
+    var currentStateDepartment = jQuery(this).is(':checked');
     var currentIDDepartment = jQuery(this).attr('id');
     alert('step two');
     jQuery("#department-step input").each(function(index) {
         if (jQuery(this).hasClass(currentIDDepartment)) {
             alert('department working');
-            var displayState = currentState ? 'inline-block' : 'block';
-            jQuery(this).css({'display':displayState});
-            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayState});
+            var displayStateDepartment = currentStateDepartment ? 'inline-block' : 'none';
+            jQuery(this).css({'display':displayStateDepartment});
+            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayStateDepartment});
         }
     });
 });
