--- a/tasks/form1/test7b.html
+++ b/tasks/form1/test7b.html
@@ -558,12 +558,13 @@
   
   
   <script>
-<!-- original code block developed by Dr. Casey Frechette follows -->
-jQuery("#institution-step input").click (function () {
+<!-- MODIFIED original code block developed by Dr. Casey Frechette follows -->
+<!-- change institution-step to college step, and college step to department step -->
+jQuery("#college-step input").click (function () {
     var currentState = jQuery(this).is(':checked');
     var currentID = jQuery(this).attr('id');
-    alert('step one okay');
-    jQuery("#college-step input").each(function(index) {
+    alert('college step clicked');
+        jQuery("#department-step").each(function(index) {
         if (jQuery(this).hasClass(currentID)) {
             var displayState = currentState ? 'inline-block' : 'none';
             jQuery(this).css({'display':displayState});
@@ -571,29 +572,8 @@ jQuery("#institution-step input").click (function () {
         }
     });
 });
-<!-- end code block developed by Dr. Casey Frechette -->
+<!-- end MODIFIEDcode block developed by Dr. Casey Frechette -->
 </script>
-<script>
-  <!-- modified code block developed by Dr. Casey Frechette follows -->
-jQuery("#college-step input").click (function () {
-    var currentStateDepartment = jQuery(this).is(':checked');
-    var currentIDDepartment = jQuery(this).attr('id');
-    alert('step two');
-    jQuery("#department-step input").each(function(index) {
-        if (jQuery(this).hasClass(currentIDDepartment)) {
-            alert('department working');
-            var displayStateDepartment = currentStateDepartment ? 'inline-block' : 'none';
-            jQuery(this).css({'display':displayStateDepartment});
-            jQuery("label[for='"+jQuery(this).attr('id')+"']" ).css({'display':displayStateDepartment});
-        }
-    });
-});
-<!-- end modified code block developed by Dr. Casey Frechette -->
-  
-  
-</script>
-    
-
   </body>
 </html>
         
