--- a/tasks/form1/test7b.html
+++ b/tasks/form1/test7b.html
@@ -10,7 +10,8 @@
 <style>
   #college-step input,
   #college-step label {
-    display: none
+    /*display: none*/
+    
   }
   #department-step input,
   #department-step label {
