--- a/tasks/form1/formatcheck3.html
+++ b/tasks/form1/formatcheck3.html
@@ -198,7 +198,7 @@
                         <input type="checkbox" name="Chemistry SM AM CHM" value="Chemistry SM AM CHM" data-institution="(i-sarasota)" class="chm-am" id="am-chm"><label for="am-chm">Chemistry (SM) (AM) (CHM)</label>
                         
                         <input type="checkbox" name="Child & Family Studies Other BC CFS" value="Child & Family Studies Other BC CFS"  data-institution="(i-other)" class="cfs-bc" id="bc-cfs"><label for="bc-cfs">Child and Family Studies (Other) (BC) (CFS)</label>
-                        <input type="checkbox" name="Child & Family Studies Other FM CFS" value="Child & Family Studies Other FM CFS"  data-institution="(i-other)" class="cfm-fm" id="cfm-fm"><label for="D24d">Child and Family Studies (Other) (FM) (CFS)</label>
+                        <input type="checkbox" name="Child & Family Studies Other FM CFS" value="Child & Family Studies Other FM CFS"  data-institution="(i-other)" class="cfm-fm" id="fm-cfm"><label for="fm-cfm">Child and Family Studies (Other) (FM) (CFS)</label>
                         
                         <input type="checkbox" name="Childhood Ed & Literacy Stdies Tampa ED EDR" value="Childhood Ed & Literacy Stdies Tampa ED EDR" data-institution="(i-tampa)" class="edr-ed" id="ed-edr"><label for="ed-edr">Childhood Ed & Literacy Stdies (Tampa) (ED) (EDR)</label>
                         <input type="checkbox" name="Childhood Ed & Literacy Stdies SP EP EDR" value="Childhood Ed & Literacy Stdies SP EP EDR" data-institution="(i-stpete)" class="edr-ep" id="ep-edr"><label for="ep-edr">Childhood Ed & Literacy Stdies (SP) (EP) (EDR)</label>
