--- a/tasks/form1/formatcheck4.html
+++ b/tasks/form1/formatcheck4.html
@@ -605,22 +605,15 @@
 
 
   <aside>
-    <header><h3>To Do List</h3></header>
-    <h4>Item One: Asses for Student Viewpoint</h4>
+    <header><h3>Other</h3></header>
+    <h4>Tested</h4>
     
         <ul>
-            <li>Use as a baseline: http://www.registrar.usf.edu/ssearch/staff/staff.php</li>
-            <li>Difference Between Web, Distance Learning,Tele-course</li>
-            <li>Filter to Open, Active Status</li>
-            <li>Title?</li>
+            <li><a href="http://goo.gl/ZrftW5">Tenon.io</a>8 Sept 2015</li>
+            <li>The document is valid HTML5 + ARIA + SVG 1.1 + MathML 2.0 (NuValidator 8 Sept 2015).</li>
+            <li><a href="https://developers.google.com/structured-data/testing-tool/">Snippet Testing all ok (8 Sept 2015)</a></li>
         </ul>
-    <h4>List</h4> 
-    
-        <ul>
-            <li>Robert</li>
-            <li>Students in Survey who said they were willing to be contacted for follow-up feedback</li>
-            <li>Possible Others at the Library (Need to check with Casey)</li>
-        </ul>   
+   
   </aside>
 
   <aside itemscope itemtype="http://schema.org/Code">
