--- a/tasks/form1/formatcheck4.html
+++ b/tasks/form1/formatcheck4.html
@@ -80,7 +80,7 @@
                         <input type="checkbox" name="Undergraduate Studies Tampa" value="Undergraduate Studies Tampa" class="i-tampa" id="C6a"><label for="C6a">Undergraduate Studies (Tampa)</label>
                         <input type="checkbox" name="Undergraduate Studies SP" value="Undergraduate Studies SP" class="i-stpete" id="C6b"><label for="C6b">Undergraduate Studies (SP)</label>
 
-                        <input type="checkbox" name="Arts and Sciences SP" value="Arts and Sciences SP" class="i-stpete"  id="C4b"><label for="C4b">Arts & Sciences (SP)////</label>
+                        <input type="checkbox" name="Arts and Sciences SP" value="Arts and Sciences SP" class="i-stpete"  id="C4b"><label for="C4b">Arts & Sciences (SP)</label>
                         
                         <input type="checkbox" name="Architecture & Community Design" value="Architecture & Community Design" class="i-other" id="C7d"><label for="C7d">Architecture & Community Design (Other)</label>
                         
