--- a/tasks/form1/formatcheck5.html
+++ b/tasks/form1/formatcheck5.html
@@ -137,7 +137,7 @@
                         <input type="checkbox" name="Anthropology SP ANT AP" value="Anthropology SP ANT AP" data-institution="(i-stpete)"  class="c-ap" id="ap-ant"><label for="ap-ant">Anthropology (SP) (AP) (ANT) </label>
                         <input type="checkbox" name="Anthropology SM ANT AM " value="Anthropology SM ANT AM" data-institution="(i-sarasota)"  class="c-am" id="am-ant"><label for="am-ant">Anthropology (SM) (AM) (ANT)</label>
                         
-                        <input type="checkbox" name="Architecture ARC AR" value="Architecture Other" data-institution="(i-other)" class="arc-ar" id="c-arc"><label for="ar-arc">Architecture  (Other) (AR) (ARC)</label>
+                        <input type="checkbox" name="Architecture ARC AR" value="Architecture Other" data-institution="(i-other)" class="c-ar" id="ar-arc"><label for="ar-arc">Architecture  (Other) (AR) (ARC)</label>
                         <input type="checkbox" name="Architecture Other ARC FA" value="College of the Arts Other" data-institution="(i-other)" class="c-fa" id="fa-arc"><label for="fa-arc">Architecture (Other) (FA) (ARC)</label>
                         
                         <input type="checkbox" name="Army (ROTC) Tampa MIS US" value="Army (ROTC) Tampa" data-institution="(i-tampa)" class="c-us" id="us-mis"><label for="us-mis">Army (ROTC) (Tampa) (MIS)</label>
